Adjusts offsets to avoid icon overlap on various resolutions

--- a/public/components/presence-indicator/_presence-indicators.scss
+++ b/public/components/presence-indicator/_presence-indicators.scss
@@ -5,10 +5,11 @@
 // Compact view
 
 $topIconOffset: 8px !default;
-$rightIconOffset: 14px !default;
+$rightIconOffset: 2px !default;
 $topIconOffsetCompact: 3px;
 $rightIconOffsetCompact: 8px;
 $iconsToStack: $textualIconSize / 4px; // Return a number (must divide values with units with values with units)
+$stackOffset: 4px;
 $iconExpandIntervalDistance: 24;
 $iconExpandIntervalDistanceCompact: 18;
 $stackColorLightenIncrement: 14%;
@@ -78,7 +79,7 @@ $iconAnimationEasingFunction: ease-in-out;
 
         @for $i from 1 to $iconsToStack {
             &:nth-of-type(#{$i+1}) {
-                right: ($i * -4) + $rightIconOffset;
+                right: ($i * -$stackOffset) + $rightIconOffset;
                 z-index: $i*-1;
                 .content-list-item__icon--presence {
                     background-color: lighten($c-presence-purple, $i*$stackColorLightenIncrement);
